enable font awesome and bundle configuration font awesome and angular CDN

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/Head.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/Head.cshtml
@@ -7,4 +7,5 @@
   <meta content="on" http-equiv="cleartype" />
 <![endif]-->
 @Styles.Render("~/Content/css")
+@Styles.Render("~/Content/font-awesome")
 @Scripts.Render("~/bundles/modernizr")
