router added angular module added

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
 }
 
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="timeTrack">
 <head>
     @Html.Partial("Head")
     <title>@Html.Raw(PageTitle(AppTitle))</title>
