--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
@@ -42,10 +42,19 @@
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
             </div>
+
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
+        <div class="row">
+            <div class="col-md-12">
+                SPA view
+                <div ng-view="">
+
+                </div>
+            </div>
+        </div>
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
