--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
@@ -27,37 +27,39 @@
     @Html.Partial("LegacyIE")
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <nav class="navbar navbar-inverse" role="navigation">
+                        <div class="container">
+                            <div class="navbar-header">
+                                @Html.ActionLink("Time Tracking Tool", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                            </div>
 
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav navbar-right">
+                                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                                    <li><a href="/#/test">Test</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </nav>
+                </div>
+            </div>            
         </div>
     </div>
     <div class="container body-content">
         @RenderBody()
-        <div class="row">
-            <div class="col-md-12">
-                SPA view
-                <div ng-view="">
-
-                </div>
-            </div>
-        </div>
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="container">
+                        <p>Copyright © Time Tracking Tool, 2014</p>
+                    </div>
+                </div>
+            </div>
         </footer>
     </div>
 
