--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                     <nav class="navbar navbar-inverse" role="navigation">
                         <div class="container">
                             <div class="navbar-header">
-                                @Html.ActionLink("Time Tracking Tool", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                                <a href="/#/" class="navbar-brand">@AppTitle</a>
                             </div>
 
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
