--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/About.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/About.cshtml
@@ -1,3 +1,3 @@
-﻿<script type="text/ng-template" id="home.html">
-    hello {{about}}
+﻿<script type="text/ng-template" id="about.html">
+    hello about the page POC {{about}}
 </script>
