--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
                                     <li>@Html.ActionLink("About", "About", "Home")</li>
                                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                                     <li><a href="/#/test">Test</a></li>
+                                    <li><a href="/#/about">About</a></li>
                                 </ul>
                             </div>
                         </div>
