fix issues in SPA currently not using bundel config. as I have faced some stange issues. when i use bundel things get crashed.

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
@@ -65,6 +65,6 @@
     </div>
 
     @Html.Partial("Scripts")
-    @RenderSection("scripts", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
