--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
@@ -11,3 +11,14 @@
         <div ng-view></div>
     </div>
 </div>
+
+@*@Scripts.Render("~/bundles/underscore")
+@Scripts.Render("~/bundles/angular")
+@Scripts.Render("~/bundles/application")*@
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+<script src="~/Scripts/application/application.js"></script>
+<script src="~/Scripts/application/router.js"></script>
+<script src="~/Scripts/application/controllers/testController.js"></script>
+<script src="~/Scripts/application/controllers/homeController.js"></script>
+<script src="~/Scripts/application/controllers/aboutController.js"></script>
