--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/Scripts.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/Scripts.cshtml
@@ -2,8 +2,8 @@
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
+@*<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
 <script src="~/Scripts/application/application.js"></script>
 <script src="~/Scripts/application/router.js"></script>
-<script src="~/Scripts/application/controllers/testController.js"></script>
+<script src="~/Scripts/application/controllers/testController.js"></script>*@
