add spa in contact

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
@@ -37,11 +37,9 @@
 
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right">
-                                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                                    <li><a href="/#/test">Test</a></li>
+                                    <li><a href="/#/">Home</a></li>
                                     <li><a href="/#/about">About</a></li>
+                                    <li><a href="/#/contact">Contact</a></li>
                                 </ul>
                             </div>
                         </div>
