--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/About.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/About.cshtml
@@ -1,3 +1,12 @@
 ﻿<script type="text/ng-template" id="about.html">
-    hello about the page POC {{about}}
+    @{
+        ViewBag.Title = "About";
+    }
+    <div class="row">
+        <div class="col-md-12">
+            <div class="container">
+                <h1 class="page-header">About</h1>
+            </div>
+        </div>
+    </div>
 </script>
