--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/contact.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/contact.cshtml
@@ -1,21 +1,39 @@
 ﻿<script type="text/ng-template" id="contact.html">
-    @{
-        ViewBag.Title = "About";
-    }
     <div class="row">
         <div class="col-md-12">
             <div class="container">
-                <address>
-                    One Microsoft Way<br />
-                    Redmond, WA 98052-6399<br />
-                    <abbr title="Phone">P:</abbr>
-                    425.555.0100
-                </address>
+                <h1 class="page-header">Contact</h1>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4><i class="fa fa-fw fa-folder"></i>Address</h4>
+                </div>
+                <div class="panel-body">
+                    <address>
+                        Riyadh ul islam<br />
+                        Dhanmondi, Dhaka 1205<br />
+                        <abbr title="Phone">P:</abbr>
+                        88017XXXXXXXXX
+                    </address>
+                </div>
+            </div>
+        </div>
 
-                <address>
-                    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-                    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-                </address>
+        <div class="col-md-6">
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <h4><i class="fa fa-fw fa-phone"></i>Contact</h4>
+                </div>
+                <div class="panel-body">
+                    <address>
+                        <strong>Support:</strong>   <a href="mailto:riyadh21@gmail.com">riyadh21@gmail.com</a><br />
+                        <strong>Marketing:</strong> <a href="mailto:riyadh21@gmail.com">riyadh21@gmail.com</a>
+                    </address>
+                </div>
             </div>
         </div>
     </div>
