--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
                                     <li><a href="/#/">Home</a></li>
                                     <li><a href="/#/about">About</a></li>
                                     <li><a href="/#/contact">Contact</a></li>
+                                    <li><a href="/#/login">Login</a></li>
                                 </ul>
                             </div>
                         </div>
