--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Login.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Login.cshtml
@@ -1,9 +1,27 @@
 ﻿<script type="text/ng-template" id="login.html">
     <div class="row">
         <div class="col-md-12">
-            <div class="container">
-                <h1 class="page-header">Login</h1>
+            &nbsp;
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-6 col-md-4 col-md-offset-4">
+            <h1 class="text-center login-title">Sign in to continue to Time Tracking tool</h1>
+            <div class="account-wall">
+                <form class="form-signin">
+                    <input type="text" class="form-control" placeholder="Email" required autofocus>
+                    <input type="password" class="form-control" placeholder="Password" required>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">
+                        Sign in
+                    </button>
+                    <label class="checkbox pull-left">
+                        <input type="checkbox" value="remember-me">
+                        Remember me
+                    </label>
+                    <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
+                </form>
             </div>
+            <a href="#" class="text-center new-account">Create an account </a>
         </div>
     </div>
 </script>
