--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Signup.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Signup.cshtml
@@ -1,4 +1,4 @@
-﻿<script type="text/ng-template" id="login.html">
+﻿<script type="text/ng-template" id="signup.html">
     <div class="row">
         <div class="col-md-12">
             &nbsp;
@@ -6,7 +6,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6 col-md-4 col-md-offset-4">
-            <h1 class="text-center login-title">Sign in to continue to Time Tracking tool</h1>
+            <h1 class="text-center login-title">Register new account to continue to Time Tracking tool</h1>
             <div class="account-wall">
                 <form class="form-signin">
                     <input type="text" class="form-control" placeholder="Email" required autofocus>
