--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
@@ -23,3 +23,4 @@
 <script src="~/Scripts/application/controllers/aboutController.js"></script>
 <script src="~/Scripts/application/controllers/contactController.js"></script>
 <script src="~/Scripts/application/controllers/loginController.js"></script>
+<script src="~/Scripts/application/controllers/signupController.js"></script>
