--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Signup.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Signup.cshtml
@@ -9,19 +9,15 @@
             <h1 class="text-center login-title">Register new account to continue to Time Tracking tool</h1>
             <div class="account-wall">
                 <form class="form-signin">
+                    <input type="text" class="form-control" placeholder="Name" required autofocus>
                     <input type="text" class="form-control" placeholder="Email" required autofocus>
                     <input type="password" class="form-control" placeholder="Password" required>
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">
-                        Sign in
-                    </button>
-                    <label class="checkbox pull-left">
-                        <input type="checkbox" value="remember-me">
-                        Remember me
-                    </label>
+                    <input type="password" class="form-control" placeholder="Retype Password" required>
+                    <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
                     <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
                 </form>
             </div>
-            <a href="/#/signup" class="text-center new-account">Create an account </a>
+            <a href="/#/login" class="text-center new-account">Already a User? Go to Login page</a>
         </div>
     </div>
 </script>
