--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Login.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Login.cshtml
@@ -11,7 +11,7 @@
                 <form class="form-signin">
                     <input type="text" class="form-control" placeholder="Email" required autofocus>
                     <input type="password" class="form-control" placeholder="Password" required>
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">
+                    <button class="btn btn-default btn-block" type="submit">
                         Sign in
                     </button>
                     <label class="checkbox pull-left">
