--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Signup.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Signup.cshtml
@@ -13,7 +13,7 @@
                     <input type="text" class="form-control" placeholder="Email" required autofocus>
                     <input type="password" class="form-control" placeholder="Password" required>
                     <input type="password" class="form-control" placeholder="Retype Password" required>
-                    <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
+                    <button class="btn btn-default btn-block" type="submit">Register</button>
                     <a href="#" class="pull-right need-help">Need help? </a><span class="clearfix"></span>
                 </form>
             </div>
