add local storage and loding bar

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
@@ -24,3 +24,5 @@
 <script src="~/Scripts/application/controllers/contactController.js"></script>
 <script src="~/Scripts/application/controllers/loginController.js"></script>
 <script src="~/Scripts/application/controllers/signupController.js"></script>
+<script src="~/Scripts/loading-bar.js"></script>
+<script src="~/Scripts/angular-local-storage.js"></script>
