--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 }
 <div class="row">
     <div class="col-md-12">
-        <div ng-view></div>
+        <div data-ng-view =""></div>
     </div>
 </div>
 
@@ -26,3 +26,4 @@
 <script src="~/Scripts/application/controllers/signupController.js"></script>
 <script src="~/Scripts/loading-bar.js"></script>
 <script src="~/Scripts/angular-local-storage.js"></script>
+<script src="~/Scripts/application/services/authService.js"></script>
