--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Login.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/ClientViews/Login.cshtml
@@ -7,11 +7,14 @@
     <div class="row">
         <div class="col-sm-6 col-md-4 col-md-offset-4">
             <h1 class="text-center login-title">Sign in to continue to Time Tracking tool</h1>
+            <div data-ng-hide="message == ''" class="alert alert-danger">
+                {{message}}
+            </div>
             <div class="account-wall">
                 <form class="form-signin">
-                    <input type="text" class="form-control" placeholder="Email" required autofocus>
-                    <input type="password" class="form-control" placeholder="Password" required>
-                    <button class="btn btn-default btn-block" type="submit">
+                    <input type="text" class="form-control" placeholder="Email" required autofocus data-ng-model="loginData.userName">
+                    <input type="password" class="form-control" placeholder="Password" required data-ng-model="loginData.password">
+                    <button class="btn btn-default btn-block" type="submit" data-ng-click="login()">
                         Sign in
                     </button>
                     <label class="checkbox pull-left">
