add interceptor factory

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
@@ -27,3 +27,4 @@
 <script src="~/Scripts/loading-bar.js"></script>
 <script src="~/Scripts/angular-local-storage.js"></script>
 <script src="~/Scripts/application/services/authService.js"></script>
+<script src="~/Scripts/application/factory/authInterceptorService.js"></script>
