login module added added index controller add interceptor service in application bootstrap

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
@@ -28,3 +28,4 @@
 <script src="~/Scripts/angular-local-storage.js"></script>
 <script src="~/Scripts/application/services/authService.js"></script>
 <script src="~/Scripts/application/factory/authInterceptorService.js"></script>
+<script src="~/Scripts/application/controllers/indexController.js"></script>
