add new controllers for users add dashboard project, new project, project list, user list, project report, user report, time, user time controller add related router for singel page appklication add static pages and nevigate to menu add spa link to those pages. add static design to dashboard

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_UsersLayout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_UsersLayout.cshtml
@@ -52,16 +52,15 @@
                     <div class="row">
                         <div class="col-md-3">
                             <div class="list-group">
-                                <a href="AdminHome.aspx" class="list-group-item active">Dash Board</a>
-                                <a href="NewProject.aspx" class="list-group-item">New Project</a>
-                                <a href="NewUser.aspx" class="list-group-item">New User</a>
-                                <a href="UserPicture.aspx" class="list-group-item">New User image</a>
-                                <a href="ProjectList.aspx" class="list-group-item">Project List</a>
-                                <a href="UserList.aspx" class="list-group-item">User List</a>
-                                <a href="Projectreport.aspx" class="list-group-item">Project Report</a>
-                                <a href="UserReport.aspx" class="list-group-item">User report</a>
-                                <a href="Time.aspx" class="list-group-item">Time</a>
-                                <a href="UserTime.aspx" class="list-group-item">User Time</a>
+                                <a href="/Users#/dashboard" class="list-group-item active">Dash Board</a>
+                                <a href="/Users#/newproject" class="list-group-item">New Project</a>
+                                <a href="/Users#/newuser" class="list-group-item">New User</a>
+                                <a href="/Users#/projectlist" class="list-group-item">Project List</a>
+                                <a href="/Users#/userlist" class="list-group-item">User List</a>
+                                <a href="/Users#/projectreport" class="list-group-item">Project Report</a>
+                                <a href="/Users#/userreport" class="list-group-item">User report</a>
+                                <a href="/Users#/time" class="list-group-item">Time</a>
+                                <a href="/Users#/usertime" class="list-group-item">User Time</a>
                             </div>
                         </div>
 
