--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
@@ -24,4 +24,13 @@
 <script src="~/Scripts/application/usersApplication/router.js"></script>
 <script src="~/Scripts/loading-bar.js"></script>
 <script src="~/Scripts/angular-local-storage.js"></script>
-
+<script src="~/Scripts/application/usersApplication/controllers/dashboardController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/newprojectController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/newuserController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/projectlistController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/projectreportController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/timeController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/userController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/userlistController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/userreportController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/usertimeController.js"></script>
