--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_UsersLayout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_UsersLayout.cshtml
@@ -30,14 +30,13 @@
             <nav class="navbar navbar-inverse" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="AdminHome.aspx">Time Tracking Tool (Admin)</a>
+                        <a class="navbar-brand" href="/Users#/">Time Tracking Tool (Admin)</a>
                     </div>
 
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
-                            <li><a href="/#/">Home</a></li>
-                            <li><a href="/#/about">About</a></li>
-                            <li><a href="/#/contact">Contact</a></li>
+                            <li><a href="/Users#/">Home</a></li>
+                            <li><a href="/Users#/settings">Setings</a></li>
                             <li><a href="/#/login">Logout</a></li>
                         </ul>
                     </div>
