--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_UsersLayout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_UsersLayout.cshtml
@@ -37,7 +37,7 @@
                         <ul class="nav navbar-nav navbar-right">
                             <li><a href="/Users#/">Home</a></li>
                             <li><a href="/Users#/settings">Setings</a></li>
-                            <li><a href="/#/login">Logout</a></li>
+                            <li><a href="/Users#/logout">Logout</a></li>
                         </ul>
                     </div>
                 </div>
