--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Home/Index.cshtml
@@ -17,6 +17,7 @@
 @Scripts.Render("~/bundles/application")*@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+<script src="~/Scripts/underscore.js"></script>
 <script src="~/Scripts/application/application.js"></script>
 <script src="~/Scripts/application/router.js"></script>
 <script src="~/Scripts/application/controllers/homeController.js"></script>
@@ -25,7 +26,8 @@
 <script src="~/Scripts/application/controllers/loginController.js"></script>
 <script src="~/Scripts/application/controllers/signupController.js"></script>
 <script src="~/Scripts/loading-bar.js"></script>
-<script src="~/Scripts/angular-local-storage.js"></script>
+@*<script src="~/Scripts/angular-local-storage.js"></script>*@
 <script src="~/Scripts/application/services/authService.js"></script>
+<script src="~/Scripts/application/services/localStorageService.js"></script>
 <script src="~/Scripts/application/factory/authInterceptorService.js"></script>
 <script src="~/Scripts/application/controllers/indexController.js"></script>
