--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
@@ -1,5 +1,4 @@
-﻿
-@{
+﻿@{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_UsersLayout.cshtml";
 }
@@ -15,15 +14,17 @@
     </div>
 </div>
 
-@*@Scripts.Render("~/bundles/underscore")
-    @Scripts.Render("~/bundles/angular")
-    @Scripts.Render("~/bundles/application")*@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+<script src="~/Scripts/underscore.js"></script>
 <script src="~/Scripts/application/usersApplication/application.js"></script>
 <script src="~/Scripts/application/usersApplication/router.js"></script>
 <script src="~/Scripts/loading-bar.js"></script>
-<script src="~/Scripts/angular-local-storage.js"></script>
+@*<script src="~/Scripts/angular-local-storage.js"></script>*@
+<script src="~/Scripts/application/services/localStorageService.js"></script>
+<script src="~/Scripts/application/services/authService.js"></script>
+<script src="~/Scripts/application/factory/authInterceptorService.js"></script>
+
 <script src="~/Scripts/application/usersApplication/controllers/dashboardController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/newprojectController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/newuserController.js"></script>
@@ -34,3 +35,5 @@
 <script src="~/Scripts/application/usersApplication/controllers/userlistController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/userreportController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/usertimeController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/logoutController.js"></script>
+
