--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
@@ -5,5 +5,6 @@
                 <h1 class="page-header">Add New Project</h1>
             </div>
         </div>
+        <input type="button" data-ng-click="addNewProject()" />
     </div>
 </script>
