--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
@@ -5,6 +5,41 @@
                 <h1 class="page-header">Add New Project</h1>
             </div>
         </div>
-        <input type="button" data-ng-click="addNewProject()" />
+    </div>
+    
+    <div class="row">
+        <div class="col-md-12">
+            <div data-ng-hide="failMessage == ''" class="alert alert-danger">
+                {{failMessage}}
+            </div>
+
+            <div data-ng-hide="successMessage == ''" class="alert alert-success">
+                {{successMessage}}
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="form-group">
+                <label for="exampleInputEmail1">Project Name</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Project Name" data-ng-model="newProject.projectName">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputPassword1">Description</label>
+                <textarea class="form-control" placeholder="Description" data-ng-model="newProject.projectDescription"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Project Start Date </label>
+                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="YYYY/MM/DD" data-ng-model="newProject.projectStartDate">
+            </div>
+            <div class="form-group">
+                <label for="exampleInputEmail1">Project End Date</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="YYYY/MM/DD" data-ng-model="newProject.projectEndDate">
+            </div>
+
+            <button type="button" class="btn btn-default" data-ng-click="addNewProject()">Add New Project</button>
+
+        </div>
     </div>
 </script>
