--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
@@ -16,6 +16,7 @@
 
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
+<script src="~/Scripts/ui-bootstrap-tpls-0.12.0.min.js"></script>
 <script src="~/Scripts/underscore.js"></script>
 <script src="~/Scripts/application/usersApplication/application.js"></script>
 <script src="~/Scripts/application/usersApplication/router.js"></script>
