--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
@@ -6,7 +6,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="row">
         <div class="col-md-12">
             <div data-ng-hide="failMessage == ''" class="alert alert-danger">
@@ -21,25 +21,40 @@
 
     <div class="row">
         <div class="col-md-12">
-            <div class="form-group">
-                <label for="exampleInputEmail1">Project Name</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Project Name" data-ng-model="newProject.projectName">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputPassword1">Description</label>
-                <textarea class="form-control" placeholder="Description" data-ng-model="newProject.projectDescription"></textarea>
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Project Start Date </label>
-                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="YYYY/MM/DD" data-ng-model="newProject.projectStartDate">
-            </div>
-            <div class="form-group">
-                <label for="exampleInputEmail1">Project End Date</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" placeholder="YYYY/MM/DD" data-ng-model="newProject.projectEndDate">
-            </div>
+            <form name="projectForm" data-ng-submit="addNewProject(projectForm.$valid)" novalidate>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Project Name</label>
+                    <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Project Name" data-ng-model="newProject.projectName">
+                    <p data-ng-show="projectForm.projectName.$invalid" class="help-block">Project name is required</p>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputPassword1">Description</label>
+                    <textarea class="form-control" placeholder="Description" data-ng-model="newProject.projectDescription" required></textarea>
+                </div>
+                <div class="form-group1">
+                    <label for="exampleInputEmail1">Project Start Date </label>
+                    <p class="input-group">
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" ng-click="projectStart($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                        </span>
+                        <input type="text" class="form-control" datepicker-popup="{{'yyyy/MM/dd'}}" ng-disabled="true" data-ng-model="newProject.projectStartDate" is-open="openedStartCalender" min-date="minDate" max-date="'2017-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" placeholder="YYYY/MM/DD" required />
 
-            <button type="button" class="btn btn-default" data-ng-click="addNewProject()">Add New Project</button>
+                    </p>
+                </div>
+                <div class="form-group">
+                    <label for="exampleInputEmail1">Project End Date</label>
+                    <p class="input-group">
+                        <span class="input-group-btn">
+                            <button type="button" class="btn btn-default" ng-click="projectEnd($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                        </span>
+                        <input type="text" class="form-control" datepicker-popup="{{'yyyy/MM/dd'}}" ng-disabled="true" data-ng-model="newProject.projectEndDate" is-open="openedEndCalender" min-date="minDate" max-date="'2017-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" placeholder="YYYY/MM/DD" required />
 
+                    </p>
+                </div>
+
+                <button type="submit" class="btn btn-default" ng-disabled="userForm.$invalid">Add New Project</button>
+                <button type="button" class="btn btn-default" data-ng-click="clearAll()">Clear</button>
+            </form>
         </div>
     </div>
 </script>
