--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
@@ -34,21 +34,20 @@
                 <div class="form-group1">
                     <label for="exampleInputEmail1">Project Start Date </label>
                     <p class="input-group">
-                        <span class="input-group-btn">
+                        <input type="text" class="form-control" datepicker-popup="{{'yyyy/MM/dd'}}" ng-disabled="true" data-ng-model="newProject.projectStartDate" is-open="openedStartCalender" min-date="minDate" max-date="'2017-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" placeholder="YYYY/MM/DD" required />
+                        <span class="input-group-btn input-group-btn-date">
                             <button type="button" class="btn btn-default" ng-click="projectStart($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                         </span>
-                        <input type="text" class="form-control" datepicker-popup="{{'yyyy/MM/dd'}}" ng-disabled="true" data-ng-model="newProject.projectStartDate" is-open="openedStartCalender" min-date="minDate" max-date="'2017-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" placeholder="YYYY/MM/DD" required />
-
                     </p>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Project End Date</label>
                     <p class="input-group">
-                        <span class="input-group-btn">
+
+                        <input type="text" class="form-control" datepicker-popup="{{'yyyy/MM/dd'}}" ng-disabled="true" data-ng-model="newProject.projectEndDate" is-open="openedEndCalender" min-date="minDate" max-date="'2017-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" placeholder="YYYY/MM/DD" required />
+                        <span class="input-group-btn input-group-btn-date">
                             <button type="button" class="btn btn-default" ng-click="projectEnd($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                         </span>
-                        <input type="text" class="form-control" datepicker-popup="{{'yyyy/MM/dd'}}" ng-disabled="true" data-ng-model="newProject.projectEndDate" is-open="openedEndCalender" min-date="minDate" max-date="'2017-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" placeholder="YYYY/MM/DD" required />
-
                     </p>
                 </div>
 
