add baseURL service add Project service add addproject, edit project, loadAll Project include new services to project controller

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
@@ -25,6 +25,8 @@
 <script src="~/Scripts/application/services/localStorageService.js"></script>
 <script src="~/Scripts/application/services/authService.js"></script>
 <script src="~/Scripts/application/factory/authInterceptorService.js"></script>
+<script src="~/Scripts/application/usersApplication/services/baseUrlService.js"></script>
+<script src="~/Scripts/application/usersApplication/services/projectService.js"></script>
 
 <script src="~/Scripts/application/usersApplication/controllers/dashboardController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/newprojectController.js"></script>
