--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
@@ -29,7 +29,7 @@
                 <div class="form-group1">
                     <label for="exampleInputEmail1">Project Start Date </label>
                     <p class="input-group">
-                        <input type="text" class="form-control" datepicker-popup="{{'yyyy/MM/dd'}}" ng-disabled="true" data-ng-model="newProject.projectStartDate" is-open="openedStartCalender" min-date="minDate" max-date="'2017-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" placeholder="YYYY/MM/DD" required />
+                        <input type="text" class="form-control" datepicker-popup="{{'MM/dd/yyyy'}}" ng-disabled="true" data-ng-model="newProject.projectStartDate" is-open="openedStartCalender" min-date="minDate" max-date="'2017-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" placeholder="MM/DD/YYYY" required />
                         <span class="input-group-btn input-group-btn-date">
                             <button type="button" class="btn btn-default" ng-click="projectStart($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                         </span>
@@ -39,7 +39,7 @@
                     <label for="exampleInputEmail1">Project End Date</label>
                     <p class="input-group">
 
-                        <input type="text" class="form-control" datepicker-popup="{{'yyyy/MM/dd'}}" ng-disabled="true" data-ng-model="newProject.projectEndDate" is-open="openedEndCalender" min-date="minDate" max-date="'2017-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" placeholder="YYYY/MM/DD" required />
+                        <input type="text" class="form-control" datepicker-popup="{{'MM/dd/yyyy'}}" ng-disabled="true" data-ng-model="newProject.projectEndDate" is-open="openedEndCalender" min-date="minDate" max-date="'2017-06-22'" datepicker-options="dateOptions" date-disabled="disabled(date, mode)" ng-required="true" close-text="Close" placeholder="MM/DD/YYYY" required />
                         <span class="input-group-btn input-group-btn-date">
                             <button type="button" class="btn btn-default" ng-click="projectEnd($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                         </span>
