add new Ajax factory to generically call ajax requests. modify project model and web api and add create date time when insert project

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
@@ -14,20 +14,28 @@
     </div>
 </div>
 
+@*Lib*@
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.2/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.0rc1/angular-route.min.js"></script>
 <script src="~/Scripts/ui-bootstrap-tpls-0.12.0.min.js"></script>
 <script src="~/Scripts/underscore.js"></script>
+
+@*Application*@
 <script src="~/Scripts/application/usersApplication/application.js"></script>
 <script src="~/Scripts/application/usersApplication/router.js"></script>
 <script src="~/Scripts/loading-bar.js"></script>
+
+@*Services*@
 @*<script src="~/Scripts/angular-local-storage.js"></script>*@
 <script src="~/Scripts/application/services/localStorageService.js"></script>
+<script src="~/Scripts/application/services/service.js"></script>
+<script src="~/Scripts/application/services/ajaxRequest.js"></script>
 <script src="~/Scripts/application/services/authService.js"></script>
 <script src="~/Scripts/application/factory/authInterceptorService.js"></script>
 <script src="~/Scripts/application/usersApplication/services/baseUrlService.js"></script>
 <script src="~/Scripts/application/usersApplication/services/projectService.js"></script>
 
+@*Controllers*@
 <script src="~/Scripts/application/usersApplication/controllers/dashboardController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/newprojectController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/newuserController.js"></script>
@@ -39,4 +47,3 @@
 <script src="~/Scripts/application/usersApplication/controllers/userreportController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/usertimeController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/logoutController.js"></script>
-
