--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_UsersLayout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_UsersLayout.cshtml
@@ -52,6 +52,7 @@
                         <div class="col-md-3">
                             <div class="list-group">
                                 <a href="/Users#/dashboard" class="list-group-item active">Dash Board</a>
+                                <a href="/Users#/newclient" class="list-group-item">New Client</a>
                                 <a href="/Users#/newproject" class="list-group-item">New Project</a>
                                 <a href="/Users#/newuser" class="list-group-item">New User</a>
                                 <a href="/Users#/projectlist" class="list-group-item">Project List</a>
