add client service and controller js

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
@@ -34,6 +34,7 @@
 <script src="~/Scripts/application/factory/authInterceptorService.js"></script>
 <script src="~/Scripts/application/usersApplication/services/baseUrlService.js"></script>
 <script src="~/Scripts/application/usersApplication/services/projectService.js"></script>
+<script src="~/Scripts/application/usersApplication/services/clientProjectService.js"></script>
 
 @*Controllers*@
 <script src="~/Scripts/application/usersApplication/controllers/dashboardController.js"></script>
@@ -47,3 +48,4 @@
 <script src="~/Scripts/application/usersApplication/controllers/userreportController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/usertimeController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/logoutController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/newclientProjectController.js"></script>
