fix validate issue in new project

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
@@ -46,7 +46,7 @@
                     </p>
                 </div>
 
-                <button type="submit" class="btn btn-default" ng-disabled="userForm.$invalid">Add New Project</button>
+                <button type="submit" class="btn btn-default" ng-disabled="projectForm.$invalid">Add New Project</button>
                 <button type="button" class="btn btn-default" data-ng-click="clearAll()">Clear</button>
             </form>
         </div>
