--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Newproject.cshtml
@@ -18,6 +18,14 @@
         <div class="col-md-12">
             <form name="projectForm" data-ng-submit="addNewProject(projectForm.$valid)" novalidate>
                 <div class="form-group">
+                    <label for="client">Client</label>
+                    <select data-ng-model="newProject.ClientProjectRefId">
+                        <option value="">Select Client</option>
+                        <option ng-repeat="client in clients.clients" value="{{client.clientName}}">{{client.clientName}}</option>
+                    </select>
+                </div>
+                
+                <div class="form-group">
                     <label for="exampleInputEmail1">Project Name</label>
                     <input type="text" class="form-control" name="projectName" id="projectName" placeholder="Project Name" data-ng-model="newProject.projectName">
                     <p data-ng-show="projectForm.projectName.$invalid" class="help-block">Project name is required</p>
