add client list menu

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_UsersLayout.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Shared/_UsersLayout.cshtml
@@ -55,6 +55,7 @@
                                 <a href="/Users#/newclient" class="list-group-item">New Client</a>
                                 <a href="/Users#/newproject" class="list-group-item">New Project</a>
                                 <a href="/Users#/newuser" class="list-group-item">New User</a>
+                                <a href="/Users#/clientlist" class="list-group-item">Client List</a>
                                 <a href="/Users#/projectlist" class="list-group-item">Project List</a>
                                 <a href="/Users#/userlist" class="list-group-item">User List</a>
                                 <a href="/Users#/projectreport" class="list-group-item">Project Report</a>
