add editcontroller js in index

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/Users/Index.cshtml
@@ -50,3 +50,4 @@
 <script src="~/Scripts/application/usersApplication/controllers/logoutController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/newclientProjectController.js"></script>
 <script src="~/Scripts/application/usersApplication/controllers/clientlistController.js"></script>
+<script src="~/Scripts/application/usersApplication/controllers/editclientProjectController.js"></script>
