configure web api for update client

--- a/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Editclientproject.cshtml
+++ b/TimeTrackMvcWebApiAngular/TimeTrackMvcWebApiAngular/Views/UsersViews/Editclientproject.cshtml
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="container">
-                <h1 class="page-header">Edit Client/{{client.clientName}}</h1>
+                <h1 class="page-header">Edit Client/{{client.ClientName}}</h1>
             </div>
         </div>
     </div>
